--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./composite/
+        with:
+          path: .composite-action
+      - uses: .composite-action/composite/
