--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,4 +7,4 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: .composite-action
-      - uses: .composite-action/composite/
+      - uses: ./.composite-action/composite
